--- a/index.ipynb
+++ b/index.ipynb
@@ -30,11 +30,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-22T15:51:23.616700Z",
+     "start_time": "2019-05-22T15:51:23.611725Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "#Your code here; load the images; be sure to also preprocess these into tensors."
+    "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import datetime\n",
+    "\n",
+    "original_start = datetime.datetime.now()\n",
+    "start = datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-22T15:58:24.842514Z",
+     "start_time": "2019-05-22T15:58:24.413041Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1738 images belonging to 2 classes.\n",
+      "Found 4 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Your code here; design and compile the model\n",
+    "train_dir = 'chest_xray_downsampled/train'\n",
+    "validation_dir = 'chest_xray_downsampled/val/'\n",
+    "test_dir = 'chest_xray_downsampled/test/'\n",
+    "\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_datagen.flow_from_directory(train_dir,\n",
+    "                                                    target_size=(150, 150),\n",
+    "                                                    batch_size=20,\n",
+    "                                                    class_mode='binary')\n",
+    "\n",
+    "validation_generator = test_datagen.flow_from_directory(validation_dir,\n",
+    "                                                        target_size=(150, 150),\n",
+    "                                                        batch_size=20,\n",
+    "                                                        class_mode='binary')"
    ]
   },
   {
@@ -51,11 +99,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-22T16:07:37.248914Z",
+     "start_time": "2019-05-22T16:07:37.013101Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "#Your code here; design and compile the model"
+    "#Set the model to train; see warnings above\n",
+    "from keras import layers\n",
+    "from keras import models\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Conv2D(32,(3,3), activation='relu', input_shape=(150, 150, 3)))\n",
+    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "model.add(layers.Conv2D(64,(3,3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "model.add(layers.Conv2D(128,(3,3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "model.add(layers.Conv2D(128,(3,3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(512, activation='relu'))\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-22T16:09:42.386331Z",
+     "start_time": "2019-05-22T16:09:42.284939Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from keras import optimizers\n",
+    "model.compile(loss='binary_crossentropy', \n",
+    "              optimizer=optimizers.RMSprop(lr=1e-4),\n",
+    "              metrics=['acc'] )"
    ]
   },
   {
@@ -78,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set the model to train; see warnings above"
+    "history = model.fit_generator(train_generator, steps_per_epoch=100,epochs=30, )"
    ]
   },
   {
@@ -87,7 +172,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot history"
+    "#Plot history\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline \n",
+    "\n",
+    "acc = history.history['acc']\n",
+    "val_acc = history.history['val_acc']\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "epochs = range(len(acc))\n",
+    "plt.plot(epochs, acc, 'bo', label='Training acc')\n",
+    "plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
+    "plt.title('Training and validation accuracy')\n",
+    "plt.legend()\n",
+    "plt.figure()\n",
+    "plt.plot(epochs, loss, 'bo', label='Training loss')\n",
+    "plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "plt.title('Training and validation loss')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -103,7 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; save the model for future reference."
+    "#Your code here; save the model for future reference.\n",
+    "model.save('chest_xray_downsampled_data.h5')"
    ]
   },
   {
@@ -124,7 +228,39 @@
    "outputs": [],
    "source": [
     "#Add data augmentation to the model setup and set the model to train; \n",
-    "#See warnings above if you intend to run this block of code"
+    "#See warnings above if you intend to run this block of code\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "      rotation_range=40,\n",
+    "      width_shift_range=0.2,\n",
+    "      height_shift_range=0.2,\n",
+    "      shear_range=0.2,\n",
+    "      zoom_range=0.2,\n",
+    "      horizontal_flip=True,\n",
+    "      fill_mode='nearest')\n",
+    "\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "        # This is the target directory\n",
+    "        train_dir,\n",
+    "        # All images will be resized to 150x150\n",
+    "        target_size=(150, 150),\n",
+    "        batch_size=32,\n",
+    "        # Since we use binary_crossentropy loss, we need binary labels\n",
+    "        class_mode='binary')\n",
+    "\n",
+    "validation_generator = test_datagen.flow_from_directory(\n",
+    "        validation_dir,\n",
+    "        target_size=(150, 150),\n",
+    "        batch_size=32,\n",
+    "        class_mode='binary')\n",
+    "\n",
+    "history = model.fit_generator(\n",
+    "      train_generator,\n",
+    "      steps_per_epoch=100,\n",
+    "      epochs=100,\n",
+    "      validation_data=validation_generator,\n",
+    "      validation_steps=50)"
    ]
   },
   {
@@ -142,7 +278,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here; perform a final evaluation using the test set.."
+    "# Your code here; perform a final evaluation using the test set..\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "        test_dir,\n",
+    "        target_size=(150, 150),\n",
+    "        batch_size=20,\n",
+    "        class_mode='binary')\n",
+    "test_loss, test_acc = model.evaluate_generator(test_generator, steps=50)\n",
+    "print('test acc:', test_acc)"
    ]
   },
   {
@@ -179,9 +322,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -193,7 +336,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
